--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "sass": "^1.79.5",
+    "sass-loader": "^16.0.2",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.0.11",
     "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.16"
