--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.vue",
+    "lint:fix": "eslint . --ext .js,.vue --fix"
   },
   "dependencies": {
     "crypto-convert": "^2.1.6",
@@ -14,8 +16,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-vue": "^10.1.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.5.3",
     "sass": "^1.79.5",
     "sass-loader": "^16.0.2",
     "tailwindcss": "^3.4.14",
